final draft commit

--- a/index.html
+++ b/index.html
@@ -78,51 +78,55 @@
     <body>
         <main class="container">
             <section class="header">
-                <h1>Your Name</h1>
+                <h1>Rebecca H</h1>
                 <p class="contact">
                     Email:
-                    <a href="mailto:yourname@example.com"
-                        >yourname@example.com</a
+                    <a href=""
+                        >example@example.com</a
                     >
-                    | Phone: (123) 456-7890 | LinkedIn:
-                    <a href="#">linkedin.com/in/yourname</a>
+                    | Phone: (111) 111-1111 | LinkedIn:
+                    <a href="#">linkedin.com/in/example</a>
                 </p>
             </section>
             <section class="section">
                 <h2>Summary</h2>
                 <p>
-                    A brief summary about yourself, your skills, and what you
-                    bring to the table. Keep it concise and impactful.
+                     I tailor all my resumes and am currently job seeking. Since this is public, I do not want my personal info on here.
                 </p>
             </section>
             <section class="section">
                 <h2>Work Experience</h2>
                 <div class="item">
-                    <h3>Job Title - Company Name</h3>
-                    <p>Dates of Employment</p>
+                    <h3>Example - Example</h3>
+                    <p>1/1/2020-12/31/2020</p>
                     <p>
-                        Brief description of your responsibilities and
-                        achievements in this role.
+                        Example description.
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Job Title - Company Name</h3>
-                    <p>Dates of Employment</p>
+                    <h3>Example - Example</h3>
+                    <p>1/1/2021-12/31/2021</p>
                     <p>
-                        Brief description of your responsibilities and
-                        achievements in this role.
+                        Example description.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Example - Example</h3>
+                    <p>1/1/2022-12/31/2022</p>
+                    <p>
+                        Example description.
                     </p>
                 </div>
             </section>
             <div class="section">
                 <h2>Education</h2>
                 <div class="item">
-                    <h3>Degree - School Name</h3>
-                    <p>Year of Graduation</p>
+                    <h3>Master of Arts - University of Louisville</h3>
+                    <p>2020</p>
                 </div>
                 <div class="item">
-                    <h3>Degree - School Name</h3>
-                    <p>Year of Graduation</p>
+                    <h3>Bachelor of Arts - Berea College</h3>
+                    <p>2018</p>
                 </div>
             </section>
             <section class="section">
@@ -133,24 +137,22 @@
                         <li>CSS</li>
                         <li>JavaScript</li>
                         <li>Python</li>
-                        <li>Team Leadership</li>
+                        <li>Stata</li>
                     </ul>
                 </div>
             </section>
             <section class="section">
                 <h2>Projects</h2>
                 <div class="item">
-                    <h3>Project Name</h3>
+                    <h3>Example</h3>
                     <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
+                        Example project description.
                     </p>
                 </div>
                 <div class="item">
-                    <h3>Project Name</h3>
+                    <h3>Example</h3>
                     <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
+                        Example project description.
                     </p>
                 </div>
             </section>
